syntax = "proto3";

package user_stats;

import "user-stats/messages.proto";

service UserStats {
  rpc Query(QueryRequest) returns (stream User) {}
  rpc RawQuery(RawQueryRequest) returns (stream User) {}
}
